--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <div class="header__all">
             <div class="header-logo">
                 <h2 class="header-logo__title">VipHouse</h2>
-                <h3 class="header-logo__subtitle">ЖИЛОЙ КОМПЛЕКС</h3>
+                <h3 class="header-logo__subtitle">RESIDENTIAL COMPLEX</h3>
             </div>
             <nav class="nav">
-                <a href="#first" class="nav__link">О комплексе</a>
-                <a href="#second" class="nav__link">Каталог квартир</a>
-                <a href="#cta" class="nav__link">Обратный звонок</a>
-                <a href="#map" class="nav__link">Район</a>
-                <a href="#form" class="nav__link">Контакты</a>
+                <a href="#first" class="nav__link">About the complex</a>
+                <a href="#second" class="nav__link">Apartment catalog</a>
+                <a href="#cta" class="nav__link">Callback</a>
+                <a href="#map" class="nav__link">Area</a>
+                <a href="#form" class="nav__link">Contacts</a>
             </nav>
             <div class="burger_menu">
                 <span class="burger_menu__line"> </span>
@@ -36,15 +36,15 @@
 
 <section class="home" id="home">
     <div class="container">
-        <h1 class="home__title"> Жилой комплекс
-            в центре города</h1>
+        <h1 class="home__title"> Residential complex
+            in the city center</h1>
         <div class="mouse">
             <a href="#test">
                 <img src="./src/img/home/mouse.png" alt="">
             </a>
         </div>
         <div class="home__group">
-            <div class="home__fontain"><img src="src/img/home/fontain.png" alt="">...Нижний Джал</div>
+            <div class="home__fontain"><img src="src/img/home/fontain.png" alt=""> ...North Side </div>
             <div class="home__call"><img src="src/img/home/call.png" alt="">...0554688040</div>
         </div>
     </div>
@@ -59,32 +59,32 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="nnn">
                         <img src="./src/img/test/first.png" alt="" class="img">
-                        <div class="test-text"> Рядом исторические <br>
-                            парки и скверы
+                        <div class="test-text">Nearby are historical <br>
+                            parks and squares
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="nnn">
                         <img src="./src/img/test/second.png" alt="" class="img">
-                        <div class="test-text">Полностью <br>
-                            обустроенный
+                        <div class="test-text">Fully <br>
+                            equipped
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="nnn">
                         <img src="./src/img/test/third.png" alt="" class="img">
-                        <div class="test-text">10 фонтанов <br>
-                            на территории
+                        <div class="test-text">10 fountains <br>
+                            on the territory
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="nnn">
                         <img src="./src/img/test/fourth.png" alt="" class="img">
-                        <div class="test-text">6 км <br>
-                            велодорожек
+                        <div class="test-text">6 km <br>
+                            of bike paths
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
 
         </div>
         <div id="second" class="second">
-            <h1 class="title">Наши квартиры</h1>
+            <h1 class="title">Our apartments</h1>
             <div class="alls">
 
                 <div class="pop">
@@ -100,14 +100,14 @@
                     <div class="poper">
                         <a href="./src/img/test/fifth.png" data-fancybox="images" data-caption="My caption">
                             <img src="./src/img/test/fifth.png" alt=""/>
-                            <text class="text">Лофт — 3 этажа</text>
+                            <text class="text">Loft - 1 floors</text>
                         </a>
                     </div>
 
                    <div class="oper">
                        <a href="./src/img/test/sixth.png" data-fancybox="images" data-caption="My caption">
                            <img src="./src/img/test/sixth.png" alt=""/>
-                           <text class="text">Лофт — 2 этажа</text>
+                           <text class="text">Loft - 2 floors</text>
                        </a>
                    </div>
 
@@ -118,13 +118,13 @@
                     <div class="koker">
                         <a href="./src/img/test/fifth.png" data-fancybox="images" data-caption="My caption">
                             <img src="./src/img/test/fifth.png" alt=""/>
-                            <text class="text">Лофт — 3 этажа</text>
+                            <text class="text">Loft - 3 floors</text>
                         </a>
                     </div>
                     <div class="oker">
                         <a href="./src/img/test/sixth.png" data-fancybox="images" data-caption="My caption">
                             <img src="./src/img/test/sixth.png" alt=""/>
-                            <text class="text">Лофт — 2 этажа</text>
+                            <text class="text">Loft - 4 floors</text>
                         </a>
                     </div>
                 </div>
@@ -139,24 +139,22 @@
 
 <section id="cta" class="cta">
     <div class="container">
-        <h2 class="cta__title">Хотите заказать обратный звонок?</h2>
+        <h2 class="cta__title">Want to order a callback?</h2>
         <div class="fff">
-            <p class="cta__subtitle">Компания VipHouse основана в 2020 году и является <br>
-                одним из лидеров строительной отрасли страны.<br> Сегодня VipHouse реализует проекты жилой и <br>
-                коммерческой недвижимости, отличающихся высоким
-                <br> качеством, стильной архитектурой, современными инновациями. </p>
+            <p class="cta__subtitle">The VipHouse company was founded in 2020 and is one of the leaders in the construction industry of the country.<br>
+                Today VipHouse implements projects of residential and commercial real estate, characterized by high quality, stylish architecture, and modern innovations.</p>
 
             <div class="cta__form">
                 <label class="cta__box">
-                    <input class="btn" placeholder="Ваше имя">
-                    <input class="btn" placeholder=" Ваш телефон">
+                    <input class="btn" placeholder="Your name">
+                    <input class="btn" placeholder="Your phone">
                 </label>
 
 
                 <div class="cta-end">
-                    <p class="page">*Мы никому не передаем ваши данные.<br>
-                        И не сохраняем ваш номер в базу.</p>
-                    <a href="#" class="btn-2">Посмотреть район</a>
+                    <p class="page">*We do not pass your data to anyone.<br>
+                        And we do not store your number in the database.</p>
+                    <a href="#" class="btn-2">View the area</a>
                 </div>
 
             </div>
@@ -175,19 +173,19 @@
             </a>
         </div>
         <div id="map" class="last__maps">
-            <h2 class="last__maps__title">Район на карте</h2>
+            <h2 class="last__maps__title">Area on the map</h2>
             <script type="text/javascript" charset="utf-8" async
                     src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A367d7f96c91e52ce708f63c52abd6189b9affc383607a841e94d42aa76628c46&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
         <div id="form" class="last__form">
-            <h2 class="subtitle">Есть вопросы?</h2>
+            <h2 class="subtitle">Have questions?</h2>
             <div class="last-box">
-                <p class="last-text">*Мы никому не передаем ваши данные. <br>
-                    И не сохраняем ваш номер в базу.</p>
+                <p class="last-text">*We do not pass your data to anyone. <br>
+                    And we do not store your number in the database.</p>
                 <label class="cta-box">
-                    <input type="text" class="btn" placeholder="Ваше имя">
-                    <input type="text" class="btn" placeholder=" Ваш телефон">
-                    <a href="#" class="button">Посмотреть район</a>
+                    <input type="text" class="btn" placeholder="Your name">
+                    <input type="text" class="btn" placeholder="Your phone">
+                    <a href="#" class="button">View the area</a>
                 </label>
             </div>
 
@@ -203,38 +201,38 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="first">
                         <h2 class="title">VipHouse</h2>
-                        <h3 class="subtitle">ЖИЛОЙ КОМПЛЕКС</h3>
+                        <h3 class="subtitle">RESIDENTIAL COMPLEX</h3>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="second">
                         <ul>
-                            <li class="nav__link">О комплексе</li>
-                            <li class="nav__link">Район</li>
-                            <li class="nav__link">Каталог квартир</li>
-                            <li class="nav__link">Ипотека</li>
-                            <li class="nav__link">Контакты</li>
+                            <li class="nav__link">About the complex</li>
+                            <li class="nav__link">Area</li>
+                            <li class="nav__link">Apartment catalog</li>
+                            <li class="nav__link">Mortgage</li>
+                            <li class="nav__link">Contacts</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="third">
                         <ul>
-                            <li class="nav__link">Видеонаблюдение</li>
-                            <li class="nav__link">Парковка</li>
-                            <li class="nav__link">Детская площадка</li>
-                            <li class="nav__link">Медпункт</li>
-                            <li class="nav__link">Охрана</li>
+                            <li class="nav__link">Video surveillance</li>
+                            <li class="nav__link">Parking</li>
+                            <li class="nav__link">Children's playground</li>
+                            <li class="nav__link">Medical center</li>
+                            <li class="nav__link">Security</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="fourth">
                         <ul>
-                            <li class="nav__link">Адрес: г.Бишкек,Манаса 32</li>
-                            <li class="nav__link">Телефон: 0554688040</li>
-                            <li class="nav__link">Отдел продаж: 10:00 - 20:00</li>
-                            <li class="nav__link">E-mail: <a href="#" class="mail">vip@housevip.ru</a></li>
+                            <li class="nav__link">Address: Manas 32, Bishkek</li>
+                            <li class="nav__link">Phone: 0554688040</li>
+                            <li class="nav__link">Sales department: 10:00 - 20:00</li>
+                            <li class="nav__link">Email: <a href="#" class="mail">vip@housevip.com</a></li>
                         </ul>
                         <div class="icons">
                             <img src="./src/img/footer/yt.png" alt="" class="icons__img">
